force-app/main/default/objects/Docusign_Recipient_Status_Sobha__c/Docusign_Recipient_Status_Sobha__c.object-meta.xml
<CustomObject>
    <label>Docusign Recipient Status Sobha</label>
    <nameField>
        <label>Docusign Recipient Status Sobha Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Docusign Recipient Status Sobha</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>