force-app/main/default/objects/Docusign_Recipient_Status_Sobha__c/fields/Application_Booking__c.field-meta.xml
<CustomField>
    <fullName>Application_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application / Booking</label>
    <referenceTo>PropStrength__Application_Booking__c</referenceTo>
    <relationshipLabel>Docusign Recipient Status Sobha</relationshipLabel>
    <relationshipName>Docusign_Recipient_Status_Sobha</relationshipName>
    <type>Lookup</type>
</CustomField>