force-app/main/default/objects/Docusign_Recipient_Status_Sobha__c/fields/Broker_Account__c.field-meta.xml
<CustomField>
    <fullName>Broker_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Docusign Recipient Status Sobha</relationshipLabel>
    <relationshipName>Docusign_Recipient_Status_Sobha</relationshipName>
    <type>Lookup</type>
</CustomField>