force-app/main/default/objects/Docusign_Recipient_Status_Sobha__c/fields/Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Reason__c</fullName>
    <label>Decline Reason</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>