force-app/main/default/objects/Docusign_Recipient_Status_Sobha__c/fields/Docusign_Broker_Registration__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Broker_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Docusign Broker Registration</label>
    <referenceTo>Broker_Registration__c</referenceTo>
    <relationshipLabel>Docusign Recipient Status Sobha</relationshipLabel>
    <relationshipName>Docusign_Recipient_Status_Sobha</relationshipName>
    <type>Lookup</type>
</CustomField>