force-app/main/default/objects/Docusign_Recipient_Status_Sobha__c/fields/DocuSign_Envelope_Status__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Envelope_Status__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>DocuSign Envelope Status</label>
    <referenceTo>dfsle__EnvelopeStatus__c</referenceTo>
    <relationshipLabel>Docusign Recipient Status Sobha PS</relationshipLabel>
    <relationshipName>Docusign_Recipient_Status_Sobha_PS</relationshipName>
    <type>Lookup</type>
</CustomField>