force-app/main/default/objects/Docusign_Recipient_Status_Sobha__c/fields/DocuSignEnvelope__c.field-meta.xml
<CustomField>
    <fullName>DocuSignEnvelope__c</fullName>
    <label>DocuSign Envelope Status</label>
    <referenceTo>dfsle__EnvelopeStatus__c</referenceTo>
    <relationshipLabel>Docusign Recipient Status Sobha</relationshipLabel>
    <relationshipName>Docusign_Recipient_Status_Sobha</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>