force-app/main/default/objects/Docusign_Recipient_Status_Sobha__c/fields/Envelope_Recipient_Type__c.field-meta.xml
<CustomField>
    <fullName>Envelope_Recipient_Type__c</fullName>
    <label>Envelope Recipient Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>Sales manager</fullName>
            </value>
            <value>
                <fullName>Secondary Sales manager</fullName>
            </value>
            <value>
                <fullName>Sales Head</fullName>
            </value>
            <value>
                <fullName>Secondary Sales Head</fullName>
            </value>
            <value>
                <fullName>Sales Ops</fullName>
            </value>
            <value>
                <fullName>Audit Team</fullName>
            </value>
            <value>
                <fullName>Seller Representative</fullName>
            </value>
            <value>
                <fullName>Document Controller</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>chrmops Team</fullName>
            </value>
            <value>
                <fullName>Broker Registration - Ashish Parakh SignOff</fullName>
            </value>
            <value>
                <fullName>Chief Audit Officer</fullName>
            </value>
            <value>
                <fullName>Document Controller2</fullName>
            </value>
            <value>
                <fullName>Broker Registration Witness</fullName>
            </value>
            <value>
                <fullName>Broker Registration - Email Category SignOff</fullName>
            </value>
            <value>
                <fullName>Authorized Signatory</fullName>
            </value>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>Resale CRM Ops</fullName>
            </value>
            <value>
                <fullName>Resale Audit</fullName>
            </value>
            <value>
                <fullName>POA</fullName>
            </value>
            <value>
                <fullName>Sobha LLC</fullName>
            </value>
            <value>
                <fullName>CRM Document Controller</fullName>
            </value>
            <value>
                <fullName>Authorised Representative</fullName>
            </value>
            <value>
                <fullName>Development Team</fullName>
            </value>
            <value>
                <fullName>Legal Team</fullName>
            </value>
            <value>
                <fullName>Primary Customer</fullName>
            </value>
            <value>
                <fullName>Account Team</fullName>
            </value>
            <value>
                <fullName>DLD Executive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>