force-app/main/default/objects/Docusign_Recipient_Status_Sobha__c/fields/Envelope_Type__c.field-meta.xml
<CustomField>
    <fullName>Envelope_Type__c</fullName>
    <label>Envelope Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booking Form</fullName>
            </value>
            <value>
                <fullName>SPA</fullName>
            </value>
            <value>
                <fullName>SPA Addendum</fullName>
            </value>
            <value>
                <fullName>Broker Registration - Agreement</fullName>
            </value>
            <value>
                <fullName>Broker Registration - NOC</fullName>
            </value>
            <value>
                <fullName>Resale NOC</fullName>
            </value>
            <value>
                <fullName>Resale process</fullName>
            </value>
            <value>
                <fullName>Broker Agreement</fullName>
            </value>
            <value>
                <fullName>MOU</fullName>
            </value>
            <value>
                <fullName>DSPA</fullName>
            </value>
            <value>
                <fullName>Transfer &amp; Assignment</fullName>
            </value>
            <value>
                <fullName>NOC TR</fullName>
            </value>
            <value>
                <fullName>Handover of Possession</fullName>
            </value>
            <value>
                <fullName>Undertaking Letter</fullName>
            </value>
            <value>
                <fullName>Home Orientation Undertaking Letter</fullName>
            </value>
            <value>
                <fullName>DSR</fullName>
            </value>
            <value>
                <fullName>NOC</fullName>
            </value>
            <value>
                <fullName>Amendment Letter</fullName>
                <isActive>false</isActive>
                <label>Amendment Letter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>