force-app/main/default/objects/Docusign_Recipient_Status_Sobha__c/fields/Last_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Last_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last Applicant</label>
    <type>Checkbox</type>
</CustomField>