force-app/main/default/objects/Docusign_Recipient_Status_Sobha__c/fields/Routing_Order__c.field-meta.xml
<CustomField>
    <fullName>Routing_Order__c</fullName>
    <label>Routing Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>