force-app/main/default/objects/Docusign_Recipient_Status_Sobha__c/fields/Sent_Final_Notification__c.field-meta.xml
<CustomField>
    <fullName>Sent_Final_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent Final Notification</label>
    <type>Checkbox</type>
</CustomField>