force-app/main/default/objects/Docusign_Recipient_Status_Sobha__c/fields/Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_ID__c</fullName>
    <label>Salesforce Source ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>