force-app/main/default/objects/Docusign_Recipient_Status_Sobha__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>56</length>
    <type>Text</type>
</CustomField>