force-app/main/default/objects/Docusign_Recipient_Status_Sobha__c/fields/Transaction_Request__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction Request</label>
    <referenceTo>PropStrength__Transaction_Requests__c</referenceTo>
    <relationshipLabel>Docusign Recipient Status Sobha</relationshipLabel>
    <relationshipName>Docusign_Recipient_Status_Sobha</relationshipName>
    <type>Lookup</type>
</CustomField>